# atla-mcp-server

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  TODO.txt  atla-mcp-server.py  package-lock.json  package.json  pyproject.toml  render.yaml  smithery.yaml
.github/workflows/: publish.yaml  python-ci.yaml
atla_mcp_server/: server.py.py
examples/: agent_notebook.ipynb
src/atla_mcp_server/: __init__.py  __main__.py  server.py
src/remote/: README.md  __init__.py  app.py
